--- a/src/pages/Footer/Footer.css
+++ b/src/pages/Footer/Footer.css
@@ -5,6 +5,7 @@
 
 .footer-menu {
   max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
